--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">DeathwishGraphicsFramework</string>
+    <string name="app_name">DeathwishGameFramework</string>
 </resources>
